--- a/redmine.conf
+++ b/redmine.conf
@@ -7,6 +7,9 @@ server {
 	server_name redmine.dev;
 	root /home/git/redmine/public;
 
+    access_log  /var/log/nginx/redmine_access.log;
+    error_log   /var/log/nginx/redmine_error.log;
+
 	location / {
 		try_files $uri/index.html $uri @redmine;
 	}
